make sure the contacts resource creates its configured path

..to avoid silly errors
http://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html

BUG: 296944